# ocultar

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .golangci.bck.yml  .golangci.temp.yml  .golangci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.french-finance.yml  docker-compose.proxy.yml  docker-compose.qwen.yml  docker-compose.yml  ecosystem.manifest.json  go.work  go.work.sum  patch.diff  patch2.diff
.claude/: preamble.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  frontend.yml  gitleaks.yml  golangci-lint.yml  golangci-lint.yml.save  govulncheck.yml  release.yml  test.yml
apps/proxy/: Dockerfile  go.mod  go.sum  main.go  main_test.go  ssrf_test.go
apps/slm-engine/: Dockerfile  go.mod  main.go  main_test.go
apps/sombra/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  mock_ai.py  start.sh
apps/web/: index.html  package-lock.json  roi_calc.html  tailwind.config.ts  tsconfig.app.json  tsconfig.json
configs/: automation_commands.json  config.french-finance.yaml  config.yaml.sample  names.json  protected_entities.json
datasets/: dev_repo_ground_truth.json  golden_dataset.json  leaky_demo.json
docker/: entrypoint.sh  protected_entities.community.json
docs/: api-reference.md  architecture.md  deployment.md
extensions/goose/: README.md  extension.yaml  ocultar_mcp.py  pyproject.toml
extensions/mistral/: README.md  manifest.json  ocultar_mistral_mcp.py  pyproject.toml  server.json
landing/: index.html  wrangler.toml
monitoring/: grafana-dashboard.json
scripts/: benchmark_ai4privacy.py  benchmark_bigcode.py  benchmark_privacy_filter.py  benchmark_runner.py  benchmark_v2.py  data_gen_french_finance.py  demo_french_finance.sh  fine_tune_privacy_filter.py  generate_checksums.sh  generate_dev_repo.py  generate_golden_dataset.py  mock_slm.go  orchestrate.sh  provision_llama.sh  rotate_key.sh  semantic.sh  serve_privacy_filter.py  sombra_benchmark.py  start.sh  sync_wiki.py  test_state_tracker.sh
security/: dashboard_integrity.json  mock_llm.py  regulatory_policy.json  verify_ocultar.sh
test_dev_repo/: README.md
(+245 files in other folders)
