[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocultar-goose-mcp"
version = "0.2.0"
description = "Zero-egress PII protection for Goose AI workflows via MCP stdio"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["pii", "privacy", "mcp", "goose", "gdpr", "zero-egress", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Repository = "https://github.com/ocultar-dev/ocultar"

[project.scripts]
ocultar-goose-mcp = "ocultar_mcp:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["ocultar_mcp.py"]
