[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocultar-mistral-mcp"
version = "0.2.0"
description = "Zero-egress PII protection for Mistral Le Chat workflows via MCP stdio"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["pii", "privacy", "mcp", "mistral", "le-chat", "rgpd", "gdpr", "zero-egress", "security", "france"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Repository = "https://github.com/ocultar-dev/ocultar"

[project.scripts]
ocultar-mistral-mcp = "ocultar_mistral_mcp:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["ocultar_mistral_mcp.py"]
